# rust_play_jwt_auth

./: Cargo.toml  README.md  keys.json
manual_test/: endpoints.http
moat_api_auth/: .env  Cargo.toml
moat_api_auth/src/: main.rs
moat_api_auth/src/app_states/: key_handler.rs  mod.rs  token_validator.rs
moat_api_auth/src/endpoints/: mod.rs
moat_api_auth_test/: Cargo.toml
moat_api_auth_test/src/: main.rs
moat_api_auth_test_remote_keys/: Cargo.toml
moat_api_auth_test_remote_keys/src/: main.rs
moat_api_auth_test_remote_validation/: Cargo.toml
moat_api_auth_test_remote_validation/src/: main.rs
moat_tool_jwt_handler/: Cargo.toml
moat_tool_jwt_handler/src/: lib.rs
moat_tool_jwt_handler/src/configs/: jwt_config.rs  mod.rs
moat_tool_jwt_handler/src/features/: mod.rs
moat_tool_jwt_handler/src/features/guards/: guard_basic_key.rs  guard_remote_key.rs  guard_remote_url.rs  mod.rs
moat_tool_jwt_handler/src/features/guards/tools/: key_based_validator.rs  mod.rs
moat_tool_jwt_handler/src/features/jwt/: create_jwt_token.rs  decode_jwt_token.rs  decode_jwt_token_header.rs  mod.rs
moat_tool_jwt_handler/src/features/services/: mod.rs
moat_tool_jwt_handler/src/features/services/key_handlers/: basic_key_handler.rs  key_handler.rs  mod.rs  remote_key_handler.rs
moat_tool_jwt_handler/src/features/services/token_validation/: basic_token_validator.rs  mod.rs  remote_token_validator.rs  remote_url_token_validator.rs  token_validator.rs  validate_token.rs
moat_tool_jwt_handler/src/models/: claims.rs  error.rs  jwk.rs  key.rs  mod.rs  permission.rs  role.rs
(+6 files in other folders)
